# mel0n-2

./: Cargo.toml  justfile  rust-toolchain.toml
bin-desktop/: Cargo.toml
bin-desktop/src/: main.rs
bin-gba/: Cargo.toml
bin-gba/.cargo/: config.toml
bin-gba/src/: main.rs
mel0n/: Cargo.toml
mel0n/assets/: brick.aseprite  fruits.aseprite  hero.aseprite  misc.aseprite  paddle.aseprite  square.aseprite
mel0n/src/: fruit.rs  gba.rs  lib.rs  physics.rs  wall.rs
