[package]
name = "mel0n"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_mod_gba = { git = "https://github.com/bushrat011899/bevy_mod_gba", optional = true }
bevy = { version = "0.16", features = [
    "bevy_state",
    "bevy_color",
], default-features = false }
agb = { version = "0.21.3", optional = true }
log = { version = "0.4", default-features = false }
itertools = { version = "0.14.0", default-features = false, features = [
    "use_alloc",
] }
assert_float_eq = { version = "1.1.4", optional = true }

[features]
gba = ["dep:agb", "dep:bevy_mod_gba", "bevy/bevy_state"]
desktop = ["bevy/default", "dep:assert_float_eq"]

# Makes debug build behave like release
#[profile.dev]
#inherits = "release"

#[profile.release]
## Compile the entire crate as one unit.
## Slows compile times, marginal improvements.
#codegen-units = 1
## Do a second optimization pass over the entire program, including dependencies.
## Slows compile times, marginal improvements.
#lto = "thin"
## Optimize with size in mind (also try "z", sometimes it is better).
## Slightly slows compile times, great improvements to file size and runtime performance.
#opt-level = "s"
## Strip all debugging information from the binary to slightly reduce file size.
#strip = "debuginfo"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
needless_pass_by_value = "allow"             # bevy forces our hand here
